Change icons in sprite

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <label class="label" for="name" name="name">Ім'я</label>
             <!-- <span class="icon name"></span> -->
             <svg class="icon name">
-              <use href="../symbol-form.svg#name"></use>
+              <use href="./images/symbol-defs.svg#name"></use>
             </svg>
           </div>
           <div class="form-field">
@@ -477,7 +477,7 @@
             <label class="label" for="phone" name="phone">Телефон</label>
             <!-- <span class="icon phone"></span> -->
             <svg class="icon phone">
-              <use href="../symbol-form.svg#mail"></use>
+              <use href="./images/symbol-defs.svg#mail"></use>
             </svg>
           </div>
           <div class="form-field">
@@ -485,7 +485,7 @@
             <label class="label" for="email" name="email">Пошта</label>
             <!-- <span class="icon email"></span> -->
             <svg class="icon email">
-              <use href="../symbol-form.svg#phone"></use>
+              <use href="./images/symbol-defs.svg#phone"></use>
             </svg>
           </div>
           <div class="form-field comment">
@@ -502,27 +502,11 @@
                 договору</a>
             </label>
             <svg class="icon check">
-              <use href="../symbol-form.svg#check"></use>
+              <use href="./images/symbol-defs.svg#check"></use>
             </svg>
           </div>
           <button type="submit">Відправити</button>
         </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <div class="probe"></div>
       </div>
