Changes after checking

--- a/index.html
+++ b/index.html
@@ -444,10 +444,14 @@
       </div>
       <form action="" class="sign">
         <div class="sign-info">
-          <label for="email">Підпишіться на розсилку</label>
+          <p class="sign-proposal">Підпишіться на розсилку</p>
+          <label for="email"></label>
           <input type="email" name="email" id="email" placeholder="E-mail">
         </div>
         <button type="submit">Підписатися
+          <svg class="send-logo">
+            <use href="./images/symbol-defs.svg#icon_send"></use>
+          </svg>
         </button>
       </form>
     </div>
@@ -456,7 +460,7 @@
     <div class="modal">
       <button class="modal-button" type="button" data-modal-close>
         <svg class="close-svg">
-          <use href="./images/symbol-defs.svg#cross-new"></use>
+          <use href="./images/symbol-defs.svg#cross_original"></use>
         </svg>
       </button>
 
