Change #send.svg in svg.sprite

--- a/index.html
+++ b/index.html
@@ -452,6 +452,10 @@
           <svg class="send-logo">
             <use href="./images/symbol-defs.svg#icon_send"></use>
           </svg>
+          <!-- <svg>
+            <use href="./images/symbol-defs.svg#icon_send" width="24" height="24"></use>
+          </svg> -->
+
         </button>
       </form>
     </div>
